feat: 实现对话摘要与中期记忆传递